@@ -122,6 +122,7 @@ It also allows you to install mods by dragging and dropping their files.</Descri
     <Compile Include="StyleUtils.cs" />
     <Compile Include="ProblemDetection\MinecraftProblem.cs" />
     <Compile Include="ProblemDetection\Problems.cs" />
+    <Compile Include="ProblemDetection\ModLoaderProblems.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
